Wed May 14 10:19:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c, sound.h: Make the quiet option work again.

Mon May  5 16:29:51 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, relational.c, play.c: cleanup of the UserCommand function.
	Avoid using UserCommand outside gtk.

Mon May  5 09:36:34 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* record.c: fix illegal g_free in RecordRead

Sun May  4 21:53:07 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: cleanup use of the word 'session' 

Sat May  3 00:07:21 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, play.c: allow double command to be used for beavers.
	Merge double/beaver menu items. Merge take/pass with accept/reject
	resignation menu items.

Tue Apr 29 22:46:50 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkwindows.c: change GTKMessage to use gtk_text_view and fix a
	sizing problem on the way.

Tue Apr 29 13:11:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* sound.c, gtkoptions.c: minor gstreamer changes. Use sync play of
	max 6 seconds in gtk sound options.

Sun Apr 27 22:15:13 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, credits.sh, dice.c, dice.h, drawboard.c, drawboard.h,
	export.h, format.c, formatgs.c, gnubg.c, gnubgmodule.c, gtkboard.c,
	gtkboard.h, gtkfile.c, gtkfile.h, gtkgame.c, gtkgame.h, gtkgamelist.c,
	gtkprefs.c, html.c, htmlimages.c, import.c, latex.c, play.c,
	progress.c, relational.c, renderprefs.c, renderprefs.h, set.c, sgf.c,
	show.c, board3d/fun3d.h, board3d/misc3d.c: use const char* in a number
	of places.

Sat Apr 26 19:09:00 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, boarddim.h, eval.c, external_y.y, gnubg.c,
	gnubgmodule.c, gtkfile.c, gtkgame.c, gtkmovelist.c,
	gtktempmap.c, html.c, htmlimages.c, makebearoff.c, multithread.c,
	play.c, set.c, sgf.c, sgf_y.y, simpleboard.c, util.c,
	board3d/font3d.c, board3d/misc3d.c, lib/neuralnet.c,
	non-src/external_l.c, non-src/external_y.c, non-src/sgf_l.c,