@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_REVISION($Revision: 1.189 $)
+AC_REVISION($Revision: 1.190 $)
 AC_INIT([GNU Backgammon],[0.9.0],[bug-gnubg@gnu.org],[gnubg])
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
@@ -280,16 +280,6 @@ dnl *************
 dnl Misc. setings
 dnl *************
 
-dnl
-dnl Record installation paths.
-dnl
-
-AC_DEFINE_DIR([_DATADIR], [datadir],
-              [Installation directory (used to determine PKGDATADIR below).])
-AC_DEFINE([PKGDATADIR],[_DATADIR "/" PACKAGE],
-          [The directory where the weights and databases will be stored.])
-
-dnl
 dnl internationalization macros
 dnl
 AM_GNU_GETTEXT([external])
